--- a/project2frontend/WebContent/views/blogsapproved.html
+++ b/project2frontend/WebContent/views/blogsapproved.html
@@ -5,7 +5,7 @@
 	<div class="panel-body">
 	<span ng-show="blogsApproved.length==0">No Blogs Approved</span>
 		<ul style="list-style: none">
-			<li ng-repeat="blog in blogsApproved">
+			<li ng-repeat="blog in blogsApproved | orderBy:'-postedOn' ">
 		    <a href="#/getblogapproved/{{blog.blogPostId}}"><b>Blog Title: </b>{{blog.blogTitle}}</a><br>
 			<b>Posted On : </b>{{blog.postedOn |  date:'dd-MMMM-yyyy'}}<br>
 			<b>Posted By : </b> {{blog.postedBy.firstname}} &nbsp; {{blog.postedBy.lastname}}<br>
